--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
                 </div>
             </div>
         </div>
+        <h1 class="bg-dark text-light text-center mt-3">NOVAC INDUMENTARIA</h1>
         <section>
             <div class="container-fluid py-4">
                 <div class="row row-cols-2 row-cols-md-2 g-1 div__contenedortarj">
