se agrego telefono al footer

--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
     </main>
 
     <footer>
-        <p class="text-center"> ©NovacIndumentaria- Av san martin 2890</p>
+        <p class="text-center"> ©NovacIndumentaria- Av san martin 2890 - telefono 45067845</p>
     </footer>
 
 
