cambio de telefono en el footer y agregado de titulos

--- a/index.html
+++ b/index.html
@@ -177,8 +177,8 @@
         <section class="hero">
             <div class="container-fluid">
                 <div class="row">
-                    <!-- <div class="hero_content">
-                        <h2 class="hero_title text-center bg-dark text-light">DESCUBRI NUESTRO <span> SALE </span></h2> -->
+                    <div class="hero_content">
+                        <h2 class="hero_title text-center bg-dark text-light">DESCUBRI NUESTRO <span> SALE </span></h2> 
                     </div>
                     <div>
                         <a href="sale.html"> <img src="images/banner3parte.jpg" alt="mujer acostada"
