--- a/remeras.html
+++ b/remeras.html
@@ -171,7 +171,7 @@
                                     novedades</button>
                             </div>
                         </form>
-                 
+                        </nav>
                 </div>
 
             </div>
