ajuste de titulos, ajuste de padding, modificacion de tarjetas

--- a/blazersycamperas.html
+++ b/blazersycamperas.html
@@ -106,7 +106,7 @@
                         </div>
                         <div class="col">
                             <div class="card div_card_productos">
-                                <img src="/images/campera1.jpg" class="card-img-top div_productos-img" alt="mujer, campera negra, pollera con diseno">
+                                <img src="images/campera1.jpg" class="card-img-top div_productos-img" alt="mujer, campera negra, pollera con diseno">
                                 <div class="card-body">
                                     <h5 class="card-title">Campera"poomper"</h5>
                                     <p class="card-text">$1880</p>
@@ -116,7 +116,7 @@
                         </div>
                         <div class="col">
                             <div class="card div_card_productos div_esp">
-                                <img src="/images/campera2.jpg" class="card-img-top div_productos-img" alt="campera celeste y blanza">
+                                <img src="images/campera2.jpg" class="card-img-top div_productos-img" alt="campera celeste y blanza">
                                 <div class="card-body">
                                     <h5 class="card-title">Campera "collage"</h5>
                                     <p class="card-text">$1390</p>
@@ -126,7 +126,7 @@
                         </div>
                         <div class="col">
                             <div class="card div_card_productos">
-                                <img src="/images/campera3.jpg" class="card-img-top div_productos-img" alt="mujer campera de cuero negra">
+                                <img src="images/campera3.jpg" class="card-img-top div_productos-img" alt="mujer campera de cuero negra">
                                 <div class="card-body ">
                                     <h5 class="card-title">Campera "goot"</h5>
                                     <p class="card-text">$1850</p>
