--- a/index.html
+++ b/index.html
@@ -109,54 +109,49 @@
                 </div>
             </div>
         </div>
-        <h1 class="bg-dark text-light text-center mt-3">NOVAC INDUMENTARIA</h1>
         <section>
             <div class="container-fluid py-4">
                 <div class="row row-cols-2 row-cols-md-2 g-1 div__contenedortarj">
                     <div class="col">
                         <div class="card card-context">
                             <img src="images/remeras.jpg" class="card-img-top" alt="mujer, tropical , remeras ">
-                            <div class="card-body">
-                                <h5 class="card-title card-tit fs-1 fw-bold">Remeras</h5>
-                                <p class="card-text card-t fs-3">This is a longer card with supporting text below as a
-                                    natural
-                                    lead-in to additional content. </p>
-                                <a href="remeras.html" class="card-comprar fw-bold fs-2">Comprar</a>
+                            <div class="card-img-overlay">
+                                <div class="card-body align-items-end">
+                                    <a href="remeras.html"class="card-title card-tit text-light fs-1 fw-bold text-center">Remeras </a>
+                                </div>
                             </div>
                         </div>
                     </div>
+
+
+
                     <div class="col">
                         <div class="card card-context">
                             <img src="images/salewinter.jpg" class="card-img-top" alt="mujer , buzo celeste">
-                            <div class="card-body">
-                                <h5 class="card-title card-tit fs-1 fw-bold">Descuentos</h5>
-                                <p class="card-t fs-3">This is a longer card with supporting text below as a natural
-                                    lead-in to additional content.</p>
-                                <a href="sale.html" class="card-comprar card-t fw-bold fs-2">Comprar</a>
+                            <div class="card-img-overlay">
+                                <div class="card-body align-items-end">
+                                    <a href="sale.html"class="card-title card-tit text-light fs-1 fw-bold text-center">Sale Winter </a>
+                                </div>
                             </div>
                         </div>
                     </div>
                     <div class="col ">
                         <div class="card card-context ">
                             <img src="images/carteras.jpg" class="card-img-top" alt="mujer con bolso negro">
-                            <div class="card-body">
-                                <h5 class="card-title card-tit fs-1 fw-bold">Carteras</h5>
-                                <p class="card-text card-t fs-3">This is a longer card with supporting text below as a
-                                    natural
-                                    lead-in to additional content.</p>
-                                <a href="carteras.html" class="card-comprar fw-bold fs-2">Comprar</a>
+                            <div class="card-img-overlay">
+                                <div class="card-body align-items-end">
+                                    <a href="carteras.html"class="card-title card-tit text-light fs-1 fw-bold text-center">Carteras</a>
+                                </div>
                             </div>
                         </div>
                     </div>
                     <div class="col  ">
                         <div class="card card-context ">
                             <img src="images/jeansypantalones.jpg" class="card-img-top" alt="mujer, jeans">
-                            <div class="card-body">
-                                <h5 class="card-title card-tit fs-1 fw-bold">Jeans & Pantalones</h5>
-                                <p class="card-text card-t fs-3">This is a longer card with supporting text below as a
-                                    natural
-                                    lead-in to additional content..</p>
-                                <a href="jeansypantalones.html" class="card-comprar fw-bold fs-2">Comprar</a>
+                            <div class="card-img-overlay">
+                                <div class="card-body align-items-end">
+                                    <a href="jeansypantalones.html"class="card-title card-tit text-light fs-1 fw-bold text-center">Jeans & Pantalones </a>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -180,7 +175,7 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="hero_content">
-                        <h2 class="hero_title text-center bg-dark text-light">DESCUBRI NUESTRO <span> SALE </span></h2>
+
                     </div>
                     <div>
                         <a href="sale.html"> <img src="images/banner3parte.jpg" alt="mujer acostada" width="100%"
@@ -195,7 +190,7 @@
 
 
         <section class="container section_vendidos ">
-            <!-- <h2 class="text-center bg-dark text-light">LOS MAS VENDIDOS</h2> -->
+
             <div class="row">
                 <div class="card-group">
                     <div class="card">
@@ -277,7 +272,7 @@
                     sostenible. Creamos valor para las personas y la sociedad en general entregando nuestra oferta al
                     cliente y desarrollando con un enfoque en el crecimiento sostenible y rentable.</p>
                 <div>
-                    <a href="#" class="btn btn-dark ofertas ">SE PARTE DE NOVAC</a>
+                    <a href="loginregister.html" class="btn btn-dark ofertas ">SE PARTE DE NOVAC</a>
                 </div>
             </div>
         </section>
@@ -304,18 +299,8 @@
         </section>
 
 
-        <div class="card bg-dark text-white tarjeta3">
-            <img src="images/campera1.jpg" class="card-img" alt="">
-            <div class="card-img-overlay">
-                <div class="card-body">
-                    <h5 class="card-title card-tit fs-1 fw-bold">Remeras</h5>
-                    <p class="card-text card-t fs-3">This is a longer card with supporting text below as a
-                        natural
-                        lead-in to additional content. </p>
-                    <a href="remeras.html" class="card-comprar fw-bold fs-2">Comprar</a>
-                </div>
-            </div>
-        </div>
+
+
     </main>
 
     <footer>
