--- a/jeansypantalones.html
+++ b/jeansypantalones.html
@@ -105,7 +105,7 @@
                         </div>
                         <div class="col">
                             <div class="card div_card_productos">
-                                <img src="/images/PANTALON1.jpg" class="card-img-top div_productos-img" alt="mujer, pantalon negro engomado">
+                                <img src="images/PANTALON1.jpg" class="card-img-top div_productos-img" alt="mujer, pantalon negro engomado">
                                 <div class="card-body">
                                     <h5 class="card-title">P."cuero"</h5>
                                     <p class="card-text">$1990</p>
@@ -115,7 +115,7 @@
                         </div>
                         <div class="col">
                             <div class="card div_card_productos div_esp">
-                                <img src="/images/PANTALON2.jpg" class="card-img-top div_productos-img" alt="pantalon beige">
+                                <img src="images/PANTALON2.jpg" class="card-img-top div_productos-img" alt="pantalon beige">
                                 <div class="card-body">
                                     <h5 class="card-title">P."toot"</h5>
                                     <p class="card-text">$1990</p>
@@ -125,7 +125,7 @@
                         </div>
                         <div class="col">
                             <div class="card div_card_productos">
-                                <img src="/images/PANTALON3.jpg" class="card-img-top div_productos-img" alt="mujer, pantalon chocolate">
+                                <img src="images/PANTALON3.jpg" class="card-img-top div_productos-img" alt="mujer, pantalon chocolate">
                                 <div class="card-body ">
                                     <h5 class="card-title">P."goyt"</h5>
                                     <p class="card-text">$2850</p>
