--- a/sale.html
+++ b/sale.html
@@ -107,7 +107,7 @@
                         </div>
                         <div class="col">
                             <div class="card div_card_productos">
-                                <img src="/images/vendido2.jpg" class="card-img-top div_productos-img" alt="...">
+                                <img src="images/vendido2.jpg" class="card-img-top div_productos-img" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title">Buzo"Imagine"</h5>
                                     <p class="card-text">$1990</p>
@@ -117,7 +117,7 @@
                         </div>
                         <div class="col">
                             <div class="card div_card_productos div_esp">
-                                <img src="/images/vendido3.jpg" class="card-img-top div_productos-img" alt="...">
+                                <img src="images/vendido3.jpg" class="card-img-top div_productos-img" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title">Camperas"Rool"</h5>
                                     <p class="card-text">$1990</p>
@@ -127,7 +127,7 @@
                         </div>
                         <div class="col">
                             <div class="card div_card_productos">
-                                <img src="/images/sale3.jpg" class="card-img-top div_productos-img" alt="...">
+                                <img src="images/sale3.jpg" class="card-img-top div_productos-img" alt="...">
                                 <div class="card-body ">
                                     <h5 class="card-title">Campera"luku"</h5>
                                     <p class="card-text">$2850</p>
