--- a/zapatos.html
+++ b/zapatos.html
@@ -106,7 +106,7 @@
                         </div>
                         <div class="col">
                             <div class="card div_card_productos">
-                                <img src="/images/zapatos4.jpg" class="card-img-top div_productos-img" alt="botas negras con hebillas">
+                                <img src="images/zapatos4.jpg" class="card-img-top div_productos-img" alt="botas negras con hebillas">
                                 <div class="card-body">
                                     <h5 class="card-title">Borcegos"roy"</h5>
                                     <p class="card-text">$1990</p>
@@ -116,7 +116,7 @@
                         </div>
                         <div class="col">
                             <div class="card div_card_productos div_esp">
-                                <img src="/images/zapato5.jpg" class="card-img-top div_productos-img" alt="botas largas blancas">
+                                <img src="images/zapato5.jpg" class="card-img-top div_productos-img" alt="botas largas blancas">
                                 <div class="card-body">
                                     <h5 class="card-title">Botas"Whiterow"</h5>
                                     <p class="card-text">$1990</p>
@@ -126,7 +126,7 @@
                         </div>
                         <div class="col">
                             <div class="card div_card_productos">
-                                <img src="/images/zapato6.jpg" class="card-img-top div_productos-img" alt="botas con taco">
+                                <img src="images/zapato6.jpg" class="card-img-top div_productos-img" alt="botas con taco">
                                 <div class="card-body ">
                                     <h5 class="card-title">Botas "Red"</h5>
                                     <p class="card-text">$2850</p>
@@ -196,3 +196,4 @@
 </body>
 
 </html>
+
