--- a/carteras.html
+++ b/carteras.html
@@ -105,7 +105,7 @@
                         </div>
                         <div class="col">
                             <div class="card div_card_productos">
-                                <img src="/images/cartera4.jpg" class="card-img-top div_productos-img" alt="cartera rosa">
+                                <img src="images/cartera4.jpg" class="card-img-top div_productos-img" alt="cartera rosa">
                                 <div class="card-body">
                                     <h5 class="card-title">Cartera"alexxa"</h5>
                                     <p class="card-text">$1990</p>
@@ -115,7 +115,7 @@
                         </div>
                         <div class="col">
                             <div class="card div_card_productos div_esp">
-                                <img src="/images/cartera5.jpg" class="card-img-top div_productos-img" alt="cartera azuk">
+                                <img src="images/cartera5.jpg" class="card-img-top div_productos-img" alt="cartera azuk">
                                 <div class="card-body">
                                     <h5 class="card-title">Cartera"rept"</h5>
                                     <p class="card-text">$790</p>
@@ -125,7 +125,7 @@
                         </div>
                         <div class="col">
                             <div class="card div_card_productos">
-                                <img src="/images/cartera6.jpg" class="card-img-top div_productos-img" alt="mochila violeta">
+                                <img src="images/cartera6.jpg" class="card-img-top div_productos-img" alt="mochila violeta">
                                 <div class="card-body ">
                                     <h5 class="card-title">Mochila"Gooy"</h5>
                                     <p class="card-text">$1500</p>
