--- a/loginregister.html
+++ b/loginregister.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Registro o ingreso">
-    <meta name="keywords" content="LOGIN REGISTRO, INGRESAR A NOVAC, INGRESAR A PLATAFORMA NOVAC, SUSCRIBIRME, REGISTRARME NOVAC, REGISTRO NOVAC, PAGINA DE INGRESO, INGRESAR">
+    <meta name="keywords"
+        content="LOGIN REGISTRO, INGRESAR A NOVAC, INGRESAR A PLATAFORMA NOVAC, SUSCRIBIRME, REGISTRARME NOVAC, REGISTRO NOVAC, PAGINA DE INGRESO, INGRESAR">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -17,7 +18,8 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light fw-bold fixed-top">
             <div class="container-fluid">
-                <a class="navbar-brand nav-titulo animate__animated animate__bounce fs-1" href="index.html">NOVAC IND</a>
+                <a class="navbar-brand nav-titulo animate__animated animate__bounce fs-1" href="index.html">NOVAC
+                    IND</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -120,39 +122,41 @@
                         <input type="checkbox" class="form-check-input" id="exampleCheck1">
                         <label class="form-check-label" for="exampleCheck1">Check me out</label>
                     </div>
-                    <button type="submit" class="btn btn-dark">Registrarme</button>
+                    <button type="submit" class="btn btn-dark ">Registrarme</button>
 
 
-                     <!-- Button trigger modal -->
-                <button type="button" class="btn boton envio-boton bg-dark text-light" data-bs-toggle="modal"
-                data-bs-target="#exampleModal">
-                INFORMACION SOBRE REGISTRO
-            </button>
+                    <!-- Button trigger modal -->
+                    <button type="button" class="btn boton envio-boton bg-dark text-light" data-bs-toggle="modal"
+                        data-bs-target="#exampleModal">
+                        INFORMACION SOBRE REGISTRO
+                    </button>
 
-            <!-- Modal -->
-            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
-                aria-hidden="true">
-                <div class="modal-dialog">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h5 class="modal-title" id="exampleModalLabel">Condiciones de registro</h5>
-                            <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                aria-label="Close"></button>
-                        </div>
-                        <div class="modal-body">
-                           Al registrarse, acepta los terminos y condiciones dispuestos por NOVACIND S.A , para mas informacion visite <a href="#">Terminos&Condiciones</a>
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-light" data-bs-dismiss="modal">Close</button>
-                            <button type="button" class="btn btn-dark" data-bs-dismiss="modal">Entendido</button>
+                    <!-- Modal -->
+                    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                        aria-hidden="true">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title" id="exampleModalLabel">Condiciones de registro</h5>
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                        aria-label="Close"></button>
+                                </div>
+                                <div class="modal-body">
+                                    Al registrarse, acepta los terminos y condiciones dispuestos por NOVACIND S.A , para
+                                    mas informacion visite <a href="#">Terminos&Condiciones</a>
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-light" data-bs-dismiss="modal">Close</button>
+                                    <button type="button" class="btn btn-dark"
+                                        data-bs-dismiss="modal">Entendido</button>
+                                </div>
+                            </div>
                         </div>
                     </div>
-                </div>
             </div>
+
+            </form>
         </div>
-                  
-                </form>
-            </div>
 
         </div>
 
@@ -160,10 +164,11 @@
         <section class="container-fluid d-flex flex-column section_redes ">
             <div class="row">
                 <div class="col-lg-12 div__CardRedes ">
-                    <div class="card div_cardRedes-outfit bg-dark text-light" style="width: 100%;">
+                    <div class="card div_cardRedes-outfit " style="width: 100%;">
                         <div class="card-body">
                             <h5 class="card-title div_CardRedes-tit text-center">#NovacStyle</h5>
-                            <p class="card-text text-center">Nos encantaria ver como combinas tus prendas novac! el mejor outfit
+                            <p class="card-text text-center">Nos encantaria ver como combinas tus prendas novac! el
+                                mejor outfit
                                 siempre tiene premio😋 .</p>
                             <a href="#" class="card-link card-enlace1 ">Seguinos en Instagram</a>
                         </div>
@@ -172,39 +177,47 @@
                 </div>
             </div>
         </section>
-        <article class="container-fluid">
+        <article class="container">
             <div class="row">
-                <div class="row row-cols-2 row-cols-md-2  g-4 div_redesv ">
-                    <div class="card div_card-redes">
-                        <img src="images/instagram1.jpg" class="card-img-top img-top div_card-img" alt="...">
-                        <div class="card-body">
-                            <p class="card-text">@lunarios</p>
+                <div class="col-12 g-4 div_redes ">
+                    <div class="card-group">
+                        <div class="card">
+                            <img src="images/instagram1.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text"> @candepicone via Instagram
+                                </p>
+                            </div>
+                            <div class="card-footer">
+                                <small class="text-muted">Last updated 6 mins ago</small>
+                            </div>
                         </div>
-                    </div>
-                    <div class="card div_card-redes">
-                        <img src="images/instagram2.jpg" class="card-img-top img-top div_card-img div_card-img1" alt="...">
-                        <div class="card-body">
-                            <p class="card-text">@camilaceballos</p>
+                        <div class="card">
+                            <img src="images/instagram2.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">@Antoperla via Instagram.</p>
+                            </div>
+                            <div class="card-footer">
+                                <small class="text-muted">Last updated 3 mins ago</small>
+                            </div>
                         </div>
-                    </div>
-
-                    <div class="card div_card-redes">
-                        <img src="images/instagram3.jpg" class="card-img-top div_card-img" alt="...">
-                        <div class="card-body">
-                            <p class="card-text">@antonellaperla</p>
-                        </div>
-                    </div>
-                    <div class="card div_card-redes">
-                        <img src="images/instagram4.jpg" class="card-img-top img-top div_card-img" alt="...">
-                        <div class="card-body">
-                            <p class="card-text">@floppy_vargas</p>
+                        <div class="card">
+                            <img src="images/instagram3.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">@Floppy_vargas via Instagram</p>
+                            </div>
+                            <div class="card-footer">
+                                <small class="text-muted">Last updated 1 hour ago</small>
+                            </div>
                         </div>
                     </div>
                 </div>
 
             </div>
         </article>
-        </section> 
+        </section>
 
         <section class="container-fluid section__newseller">
             <h2 class="text-center">SUSCRIBITE A NUESTRO NEWSELLER</h2>
