cambio register/login, logo whatsapp, ajuste mediaqueris

--- a/loginregister.html
+++ b/loginregister.html
@@ -166,7 +166,7 @@
                 <div class="col-lg-12 div__CardRedes ">
                     <div class="card div_cardRedes-outfit " style="width: 100%;">
                         <div class="card-body">
-                            <h5 class="card-title div_CardRedes-tit text-center">#NovacStyle</h5>
+                            <h1 class="card-title div_CardRedes-tit text-center ">#NovacStyle</h1>
                             <p class="card-text text-center">Nos encantaria ver como combinas tus prendas novac! el
                                 mejor outfit
                                 siempre tiene premio😋 .</p>
@@ -184,28 +184,28 @@
                         <div class="card">
                             <img src="images/instagram1.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
+                                <h3 class="card-title">Gorro "Shine"</h3>
                                 <p class="card-text"> @candepicone via Instagram
                                 </p>
                             </div>
                             <div class="card-footer">
-                                <small class="text-muted">Last updated 6 mins ago</small>
+                                <small class="text-muted">Last updated 7 mins ago</small>
                             </div>
                         </div>
                         <div class="card">
                             <img src="images/instagram2.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
+                                <h3 class="card-title">Campera "look"</h3>
                                 <p class="card-text">@Antoperla via Instagram.</p>
                             </div>
                             <div class="card-footer">
-                                <small class="text-muted">Last updated 3 mins ago</small>
+                                <small class="text-muted">Last updated 34 mins ago</small>
                             </div>
                         </div>
                         <div class="card">
                             <img src="images/instagram3.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
+                                <h3 class="card-title">Borcegos "Lola"</h3>
                                 <p class="card-text">@Floppy_vargas via Instagram</p>
                             </div>
                             <div class="card-footer">
@@ -220,7 +220,7 @@
         </section>
 
         <section class="container-fluid section__newseller">
-            <h2 class="text-center">SUSCRIBITE A NUESTRO NEWSELLER</h2>
+            <h3 class="text-center">SUSCRIBITE A NUESTRO NEWSELLER</h3>
             <div class="row">
                 <div class="col-md-12">
                     <nav class="navbar navbar-light bg-light">
