--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" href="aboutus.html#contacto">Contacto</a>
+                            <a class="nav-link" href="index.html#contacto">Contacto</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="loginregister.html" target="_blank">Register/Login</a>
@@ -117,7 +117,8 @@
                             <img src="images/remeras.jpg" class="card-img-top" alt="mujer, tropical , remeras ">
                             <div class="card-img-overlay">
                                 <div class="card-body align-items-end">
-                                    <a href="remeras.html"class="card-title card-tit text-light fs-1 fw-bold text-center">Remeras </a>
+                                    <a href="remeras.html"
+                                        class="card-title card-tit text-light fs-1 fw-bold text-center">Remeras </a>
                                 </div>
                             </div>
                         </div>
@@ -130,7 +131,8 @@
                             <img src="images/salewinter.jpg" class="card-img-top" alt="mujer , buzo celeste">
                             <div class="card-img-overlay">
                                 <div class="card-body align-items-end">
-                                    <a href="sale.html"class="card-title card-tit text-light fs-1 fw-bold text-center">Sale Winter </a>
+                                    <a href="sale.html"
+                                        class="card-title card-tit text-light fs-1 fw-bold text-center">Sale Winter </a>
                                 </div>
                             </div>
                         </div>
@@ -140,7 +142,8 @@
                             <img src="images/carteras.jpg" class="card-img-top" alt="mujer con bolso negro">
                             <div class="card-img-overlay">
                                 <div class="card-body align-items-end">
-                                    <a href="carteras.html"class="card-title card-tit text-light fs-1 fw-bold text-center">Carteras</a>
+                                    <a href="carteras.html"
+                                        class="card-title card-tit text-light fs-1 fw-bold text-center">Carteras</a>
                                 </div>
                             </div>
                         </div>
@@ -150,7 +153,9 @@
                             <img src="images/jeansypantalones.jpg" class="card-img-top" alt="mujer, jeans">
                             <div class="card-img-overlay">
                                 <div class="card-body align-items-end">
-                                    <a href="jeansypantalones.html"class="card-title card-tit text-light fs-1 fw-bold text-center">Jeans & Pantalones </a>
+                                    <a href="jeansypantalones.html"
+                                        class="card-title card-tit text-light fs-1 fw-bold text-center">Jeans &
+                                        Pantalones </a>
                                 </div>
                             </div>
                         </div>
@@ -163,12 +168,12 @@
 
 
 
-        <!-- <section>
+     <section>
             <div>
-                <a href="https://www.whatsapp.com/"><img src="images/whatsapp-logo-11-1019x1024.png" alt="logoWhatsapp"
+                <a href="https://www.whatsapp.com/"><img src="images/whatsapp-logo-11-1019x1024.png" alt="logoWhatsapp" 
                         class="logo__whatsapp"></a>
             </div>
-        </section> -->
+        </section> 
 
 
         <section class="hero">
@@ -265,7 +270,7 @@
             </div>
 
             <div
-                class=" col-12 col-md-5 col-lg-8 d-flex flex-column align-items-center gap-3 align-items-md-center justify-content-center text-center pt-3">
+              id="contacto"  class=" col-12 col-md-5 col-lg-8 d-flex flex-column align-items-center gap-3 align-items-md-center justify-content-center text-center pt-3">
                 <h1 class="fw-bold novacTitulo animate__animated animate__backInRight">QUIENES SOMOS</h1>
                 <p class="w-75 lead ">NOVAC Group es una familia de marcas y negocios que hace posible que los clientes
                     de todo el mundo se expresen a través de la moda y el diseño, y elijan un estilo de vida más
@@ -274,7 +279,15 @@
                 <div>
                     <a href="loginregister.html" class="btn btn-dark ofertas ">SE PARTE DE NOVAC</a>
                 </div>
+
+                <div class="py-2" >
+                    <h2 class="fw-bold fs-4">Contactanos en las redes</h2>
+                    <a href="#"><img src="images/instagram.png" alt="" width="10%"></a>
+                    <a href="#"> <img src="images/gorjeo.png" alt="" width="10%"></a>
+                    <a href="#"> <img src="images/facebook.png" alt="" width="10%"></a>
+                </div>
             </div>
+
         </section>
         <section class="container-fluid section__newseller">
             <h2 class="text-center">SUSCRIBITE A NUESTRO NEWSLETTER</h2>
