--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" href="index.html#aboutus">AboutUs</a>
+                            <a class="nav-link" href="index.html#contacto">AboutUs</a>
                         </li>
 
                         <li class="nav-item">
