--- a/jeansypantalones.html
+++ b/jeansypantalones.html
@@ -50,11 +50,11 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" href="index.html#aboutus">AboutUs</a>
+                            <a class="nav-link" href="index.html#contacto">AboutUs</a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" href="aboutus.html#contacto">Contacto</a>
+                            <a class="nav-link" href="index.html#contacto">Contacto</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="loginregister.html" target="_blank">Register/Login</a>
