--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
     </script>
 
 
-    <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script> -->
 </body>
 
 </html>
