correccion de mediasqueris, cambio de imagenes

--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light fw-bold fixed-top">
             <div class="container-fluid">
-                <a class="navbar-brand nav-titulo animate__animated animate__bounce fs-1" href="index.html">NOVAC
-                    IND</a>
+                <a class="navbar-brand nav-titulo animate__animated animate__bounce fs-1" href="index.html">NOVACIND</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -32,9 +31,9 @@
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                                data-bs-toggle="dropdown" aria-expanded="false">
-                                Productos
+                                data-bs-toggle="dropdown" aria-expanded="false">Productos
                             </a>
+
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <li><a class="dropdown-item" href="remeras.html">Remeras</a></li>
                                 <li><a class="dropdown-item" href="jeansypantalones.html">Jeans & Pantalones</a></li>
@@ -46,7 +45,6 @@
                                 </li>
                                 <li><a class="dropdown-item" href="sale.html">SALE</a></li>
                             </ul>
-                        </li>
                         <li class="nav-item">
                             <a class="nav-link" href="sale.html">Descuentos</a>
                         </li>
@@ -61,21 +59,27 @@
                         <li class="nav-item">
                             <a class="nav-link" href="loginregister.html" target="_blank">Register/Login</a>
                         </li>
+
                     </ul>
+
                     <form class="d-flex">
                         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                         <button class="btn btn-outline-success" type="submit">Search</button>
                     </form>
+
                 </div>
+            </div>
             </div>
 
         </nav>
     </header>
+
+
     <main>
-        <div class="container-fluid ">
+        <div class="container-fluid w-100 div_carousel ">
             <div class="row">
                 <div class="col-lg-12 ">
-                    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+                    <div id="carouselExampleIndicators" class="carousel slide carousel" data-bs-ride="carousel">
                         <div class="carousel-indicators">
                             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
                                 class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -84,15 +88,18 @@
                             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
                                 aria-label="Slide 3"></button>
                         </div>
-                        <div class="carousel-inner">
+
+                        <div class="carousel-inner ">
                             <div class="carousel-item active">
                                 <img src="images/banner.jpg" class="d-block w-100" alt="...">
                             </div>
+
                             <div class="carousel-item">
-                                <img src="images/banner2.jpg" class="d-block w-100" alt="...">
+                                <img src="images/banner2-min.jpg" class="d-block w-100" alt="...">
                             </div>
+
                             <div class="carousel-item">
-                                <img src="images/banner2parte.jpg" class="d-block w-100" alt="...">
+                                <img src="images/banner2parte-min.jpg" class="d-block w-100" alt="...">
                             </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
@@ -109,16 +116,18 @@
                 </div>
             </div>
         </div>
+
         <section>
-            <div class="container-fluid py-4">
-                <div class="row row-cols-2 row-cols-md-2 g-1 div__contenedortarj">
+            <div class="container-fluid py-2">
+                <div class="row row-cols-2 row-cols-md-2 g-1 div__contenedortarj align-items-center ">
                     <div class="col">
                         <div class="card card-context">
-                            <img src="images/remeras.jpg" class="card-img-top" alt="mujer, tropical , remeras ">
+                            <img src="images/thro.jpg" class="card-img-top card-imagen"
+                                alt="mujer, tropical , remeras ">
                             <div class="card-img-overlay">
                                 <div class="card-body align-items-end">
                                     <a href="remeras.html"
-                                        class="card-title card-tit text-light fs-1 fw-bold text-center">Remeras </a>
+                                        class="card-title card-tit text-light fs-1 fw-bold text-center"> Remeras </a>
                                 </div>
                             </div>
                         </div>
@@ -128,7 +137,7 @@
 
                     <div class="col">
                         <div class="card card-context">
-                            <img src="images/salewinter.jpg" class="card-img-top" alt="mujer , buzo celeste">
+                            <img src="images/win.jpg" class="card-img-top" alt="mujer , buzo celeste">
                             <div class="card-img-overlay">
                                 <div class="card-body align-items-end">
                                     <a href="sale.html"
@@ -138,19 +147,19 @@
                         </div>
                     </div>
                     <div class="col ">
-                        <div class="card card-context ">
-                            <img src="images/carteras.jpg" class="card-img-top" alt="mujer con bolso negro">
+                        <div class="card card-context card-context">
+                            <img src="images/th2.jpg" class="card-img-top" alt="mujer con bolso negro">
                             <div class="card-img-overlay">
                                 <div class="card-body align-items-end">
-                                    <a href="carteras.html"
-                                        class="card-title card-tit text-light fs-1 fw-bold text-center">Carteras</a>
+                                    <a href="zapatos.html"
+                                        class="card-title card-tit text-light fs-1 fw-bold text-center">Zapatos</a>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="col  ">
-                        <div class="card card-context ">
-                            <img src="images/jeansypantalones.jpg" class="card-img-top" alt="mujer, jeans">
+                        <div class="card  card-context">
+                            <img src="images/jean6.jpg" class="card-img-top" alt="mujer, jeans">
                             <div class="card-img-overlay">
                                 <div class="card-body align-items-end">
                                     <a href="jeansypantalones.html"
@@ -168,29 +177,28 @@
 
 
 
-     <section>
+        <section>
             <div>
-                <a href="https://www.whatsapp.com/"><img src="images/whatsapp-logo-11-1019x1024.png" alt="logoWhatsapp" 
+                <a href="https://www.whatsapp.com/"><img src="images/whatsapp-logo-11-1019x1024.png" alt="logoWhatsapp"
                         class="logo__whatsapp"></a>
             </div>
-        </section> 
+        </section>
 
 
-        <section class="hero">
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="hero_content">
 
-                    </div>
-                    <div>
-                        <a href="sale.html"> <img src="images/banner3parte.jpg" alt="mujer acostada" width="100%"
-                                class="hero__imagen"></a>
-
+        <section class="hero container-fluid">
+            <h2 class="fs-1 text-center bg-dark text-light">Blazers & Camperas</h2>
+            <div class="row">
+                <div class="card  text-white">
+                    <img src="images/banner0-min.jpg" class="card-img" alt="...">
+                    <div class="card-img-overlay d-flex justify-content-center align-items-end">
+                        <a href="blazersycamperas.html" class="a-shop">SHOP NOW </a>
                     </div>
                 </div>
             </div>
-
         </section>
+
+
 
 
 
@@ -198,7 +206,7 @@
 
             <div class="row">
                 <div class="card-group">
-                    <div class="card">
+                    <div class="card card_vendidos">
                         <img src="images/vendido1.jpg" class="card-img-top" alt="buzo celeste">
                         <div class="card-body">
                             <h5 class="card-title">BUZO "TACUARI"</h5>
@@ -208,7 +216,7 @@
                                 class="btn btn-link bg-dark text-light text-decoration-none boton-comprar">Comprar</a>
                         </div>
                     </div>
-                    <div class="card">
+                    <div class="card card_vendidos">
                         <img src="images/vendido2.jpg" class="card-img-top" alt="mujer, buzo beige con dibujos">
                         <div class="card-body">
                             <h5 class="card-title">BUZO "IMAGINE"</h5>
@@ -218,7 +226,7 @@
                                 class="btn btn-link bg-dark text-light text-decoration-none boton-comprar">Comprar</a>
                         </div>
                     </div>
-                    <div class="card">
+                    <div class="card card_vendidos">
                         <img src="images/vendido3.jpg" class="card-img-top" alt="mujer rubia, campera chocolate">
                         <div class="card-body">
                             <h5 class="card-title">CAMPERA "ROOL"</h5>
@@ -235,9 +243,9 @@
             </div>
         </section>
 
-        <section class="mt-5 py-5 row justify-content-center w-100 " id="aboutus">
+        <section class="mt-5 py-1 row justify-content-center w-100 " id="aboutus">
             <div class=" col-12 col-md-7 col-lg-4 d-flex justify-content-center align-items-center">
-                <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+                <div id="carouselExampleIndicators" class="carousel slide div_carousel" data-bs-ride="carousel">
                     <div class="carousel-indicators">
                         <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
                             class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -269,10 +277,11 @@
                 </div>
             </div>
 
-            <div
-              id="contacto"  class=" col-12 col-md-5 col-lg-8 d-flex flex-column align-items-center gap-3 align-items-md-center justify-content-center text-center pt-3">
+            <div id="contacto"
+                class=" col-12 col-md-5 col-lg-8 d-flex flex-column align-items-center gap-3 align-items-md-center justify-content-center text-center pt-3 ">
                 <h1 class="fw-bold novacTitulo animate__animated animate__backInRight">QUIENES SOMOS</h1>
-                <p class="w-75 lead ">NOVAC Group es una familia de marcas y negocios que hace posible que los clientes
+                <p class="w-75 lead novacParrafo ">NOVAC Group es una familia de marcas y negocios que hace posible que
+                    los clientes
                     de todo el mundo se expresen a través de la moda y el diseño, y elijan un estilo de vida más
                     sostenible. Creamos valor para las personas y la sociedad en general entregando nuestra oferta al
                     cliente y desarrollando con un enfoque en el crecimiento sostenible y rentable.</p>
@@ -280,7 +289,7 @@
                     <a href="loginregister.html" class="btn btn-dark ofertas ">SE PARTE DE NOVAC</a>
                 </div>
 
-                <div class="py-2" >
+                <div class="py-1">
                     <h2 class="fw-bold fs-4">Contactanos en las redes</h2>
                     <a href="#"><img src="images/instagram.png" alt="" width="10%"></a>
                     <a href="#"> <img src="images/gorjeo.png" alt="" width="10%"></a>
@@ -289,6 +298,7 @@
             </div>
 
         </section>
+        <hr>
         <section class="container-fluid section__newseller">
             <h2 class="text-center">SUSCRIBITE A NUESTRO NEWSLETTER</h2>
             <div class="row">
@@ -332,11 +342,11 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
-    integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
-    crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
-    integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
-    crossorigin="anonymous"></script>
+        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+        crossorigin="anonymous"></script>
 
 
 
