--- a/loginregister.html
+++ b/loginregister.html
@@ -72,7 +72,7 @@
     </header>
     <main class="container-fluid my-3">
         <div class="row justify-content-center align-items-center">
-            <div class="col-md-5 bg-light text-dark">
+            <div class="col-md-5 bg-light text-dark ">
                 <h3 class="">INICIA SESION </h3>
                 <hr>
                 <form id="login">
@@ -122,11 +122,11 @@
                         <input type="checkbox" class="form-check-input" id="exampleCheck1">
                         <label class="form-check-label" for="exampleCheck1">Check me out</label>
                     </div>
-                    <button type="submit" class="btn btn-dark ">Registrarme</button>
+                    <button type="submit" class="btn btn-dark registrarme ">Registrarme</button>
 
 
                     <!-- Button trigger modal -->
-                    <button type="button" class="btn boton envio-boton bg-dark text-light" data-bs-toggle="modal"
+                    <button type="button" class="btn boton envio-boton bg-dark text-light informacion_registro" data-bs-toggle="modal"
                         data-bs-target="#exampleModal">
                         INFORMACION SOBRE REGISTRO
                     </button>
