--- a/blazersycamperas.html
+++ b/blazersycamperas.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Blazers y camperas">
-    <meta name="keywords" content="BLAZERS, CAMPERAS, ABRIGOS, INVIERNO, OTONO, COLORES NEUTROS, BLANCO, NEGRO, BUZOS, TEMPORADA OTONO INVIERNO, POLERA, CAMPERAS DE CUERO, CAMPERAS ABRIGADAS, ">
+    <meta name="keywords"
+        content="BLAZERS, CAMPERAS, ABRIGOS, INVIERNO, OTONO, COLORES NEUTROS, BLANCO, NEGRO, BUZOS, TEMPORADA OTONO INVIERNO, POLERA, CAMPERAS DE CUERO, CAMPERAS ABRIGADAS, ">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -74,10 +75,11 @@
         <section class="section_productos">
             <div class="container">
                 <div class="row">
-                    <div class="row row-cols-3 row-cols-md-3 g-4">
+                    <div class="row row-cols-3 row-cols-md-3 g-4 productos-flex">
                         <div class="col">
                             <div class="card div_card_productos">
-                                <img src="images/blazer1.jpg" class="card-img-top div_productos-img" alt="mujer, blazer negro, ">
+                                <img src="images/blazer1.jpg" class="card-img-top div_productos-img"
+                                    alt="mujer, blazer negro, ">
                                 <div class="card-body ">
                                     <h5 class="card-title">Blazer"blaxi"</h5>
                                     <p class="card-text">$1790</p>
@@ -87,7 +89,8 @@
                         </div>
                         <div class="col">
                             <div class="card div_card_productos">
-                                <img src="images/blazer2.jpg" class="card-img-top div_productos-img" alt="mujer, polera, jean, blazer cuadrille">
+                                <img src="images/blazer2.jpg" class="card-img-top div_productos-img"
+                                    alt="mujer, polera, jean, blazer cuadrille">
                                 <div class="card-body ">
                                     <h5 class="card-title">Blazer"grey"</h5>
                                     <p class="card-text">$1789</p>
@@ -97,7 +100,8 @@
                         </div>
                         <div class="col">
                             <div class="card div_card_productos">
-                                <img src="images/blazer3.jpg" class="card-img-top div_productos-img" alt="mujer, blazer camel">
+                                <img src="images/blazer3.jpg" class="card-img-top div_productos-img"
+                                    alt="mujer, blazer camel">
                                 <div class="card-body">
                                     <h5 class="card-title">Cardigan"barch"</h5>
                                     <p class="card-text">$1534</p>
@@ -107,7 +111,8 @@
                         </div>
                         <div class="col">
                             <div class="card div_card_productos">
-                                <img src="images/campera1.jpg" class="card-img-top div_productos-img" alt="mujer, campera negra, pollera con diseno">
+                                <img src="images/campera1.jpg" class="card-img-top div_productos-img"
+                                    alt="mujer, campera negra, pollera con diseno">
                                 <div class="card-body">
                                     <h5 class="card-title">Campera"poomper"</h5>
                                     <p class="card-text">$1880</p>
@@ -117,7 +122,8 @@
                         </div>
                         <div class="col">
                             <div class="card div_card_productos div_esp">
-                                <img src="images/campera2.jpg" class="card-img-top div_productos-img" alt="campera celeste y blanza">
+                                <img src="images/campera2.jpg" class="card-img-top div_productos-img"
+                                    alt="campera celeste y blanza">
                                 <div class="card-body">
                                     <h5 class="card-title">Campera "collage"</h5>
                                     <p class="card-text">$1390</p>
@@ -127,7 +133,8 @@
                         </div>
                         <div class="col">
                             <div class="card div_card_productos">
-                                <img src="images/campera3.jpg" class="card-img-top div_productos-img" alt="mujer campera de cuero negra">
+                                <img src="images/campera3.jpg" class="card-img-top div_productos-img"
+                                    alt="mujer campera de cuero negra">
                                 <div class="card-body ">
                                     <h5 class="card-title">Campera "goot"</h5>
                                     <p class="card-text">$1850</p>
@@ -173,7 +180,7 @@
                                     novedades</button>
                             </div>
                         </form>
-                    
+
                 </div>
 
             </div>
