--- a/remeras.html
+++ b/remeras.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Remeras">
-    <meta name="keywords" content="REMERA, MUSCULOSA, REMERA CORTA, PUPERA, REMERA LARGA, REMERA MANGA LARGA, REMERA MANGA CORTA, REMERA CON DISENO, REMERA ESTAMPADA, REMERA LISTA, REMERA CLASICA, REMERA BASICA, TOP DE FIESTA, TOP , TOP CORTO">
+    <meta name="keywords"
+        content="REMERA, MUSCULOSA, REMERA CORTA, PUPERA, REMERA LARGA, REMERA MANGA LARGA, REMERA MANGA CORTA, REMERA CON DISENO, REMERA ESTAMPADA, REMERA LISTA, REMERA CLASICA, REMERA BASICA, TOP DE FIESTA, TOP , TOP CORTO">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -17,7 +18,8 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light fw-bold fixed-top">
             <div class="container-fluid">
-                <a class="navbar-brand nav-titulo animate__animated animate__bounce fs-1" href="index.html">NOVAC IND</a>
+                <a class="navbar-brand nav-titulo animate__animated animate__bounce fs-1" href="index.html">NOVAC
+                    IND</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -72,7 +74,7 @@
         <section class="section_productos">
             <div class="container">
                 <div class="row">
-                    <div class="row row-cols-3 row-cols-md-3 g-4">
+                    <div class="row row-cols-3 row-cols-md-3 g-4 productos-flex">
                         <div class="col">
                             <div class="card div_card_productos">
                                 <img src="images/remera1.jpg" class="card-img-top div_productos-img" alt="...">
@@ -129,8 +131,8 @@
                                 <div class="card-body ">
                                     <h5 class="card-title">Remera "fly"</h5>
                                     <p class="card-text">$850</p>
-                                    <a href="#" class="card-enlace" >Comprar</a>
-                                    
+                                    <a href="#" class="card-enlace">Comprar</a>
+
                                 </div>
                             </div>
                         </div>
@@ -171,7 +173,7 @@
                                     novedades</button>
                             </div>
                         </form>
-                        </nav>
+                    </nav>
                 </div>
 
             </div>
@@ -186,11 +188,11 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
-    integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
-    crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
-    integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
-    crossorigin="anonymous"></script>
+        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+        crossorigin="anonymous"></script>
 
 </body>
 
