--- a/sale.html
+++ b/sale.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Sale">
-    <meta name="keywords" content="DESCUENTO, SALE, SALE WINTER, SALE INVIERNO, PRECIO ACCESIBLE, DESCUENTO CIERRE TEMPORADA, CIERRE TEMPORADA, TARJETAS, PROMOCIONES, REBAJAS, REBAJA DE PRECIOS, TEMPORADA PASADA, TOTAL REBAJAS">
+    <meta name="keywords"
+        content="DESCUENTO, SALE, SALE WINTER, SALE INVIERNO, PRECIO ACCESIBLE, DESCUENTO CIERRE TEMPORADA, CIERRE TEMPORADA, TARJETAS, PROMOCIONES, REBAJAS, REBAJA DE PRECIOS, TEMPORADA PASADA, TOTAL REBAJAS">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -74,7 +75,7 @@
         <section class="section_productos">
             <div class="container">
                 <div class="row">
-                    <div class="row row-cols-3 row-cols-md-3 g-4">
+                    <div class="row row-cols-3 row-cols-md-3 g-4 productos-flex">
                         <div class="col">
                             <div class="card div_card_productos">
                                 <img src="images/sale1.jpg" class="card-img-top div_productos-img" alt="...">
@@ -173,7 +174,7 @@
                                     novedades</button>
                             </div>
                         </form>
-                   
+
                 </div>
 
             </div>
