--- a/zapatos.html
+++ b/zapatos.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Calzado">
-    <meta name="keywords" content="ZAPATOS, BORCEGOS, BORCEGOS CUERO, ZAPATILLAS, ZAPATOS ALTOS, BOTAS DE CUERO, BOTAS DE LLUVIA, BOTAS BAJAS, BORCEGOS DE CUERO, BOTAS DE COLORES, BOTAS CHAROL, BOTAS LARGAS, ZAPATOS DE COLORES, ZAPATOS COLEGIO, TALLES GRANDES, TALLES CHICOS, CALZADO DE MUJER, CALZADO FEMENINO">
+    <meta name="keywords"
+        content="ZAPATOS, BORCEGOS, BORCEGOS CUERO, ZAPATILLAS, ZAPATOS ALTOS, BOTAS DE CUERO, BOTAS DE LLUVIA, BOTAS BAJAS, BORCEGOS DE CUERO, BOTAS DE COLORES, BOTAS CHAROL, BOTAS LARGAS, ZAPATOS DE COLORES, ZAPATOS COLEGIO, TALLES GRANDES, TALLES CHICOS, CALZADO DE MUJER, CALZADO FEMENINO">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -73,10 +74,11 @@
         <section class="section_productos">
             <div class="container">
                 <div class="row">
-                    <div class="row row-cols-3 row-cols-md-3 g-4">
+                    <div class="row row-cols-3 row-cols-md-3 g-4 productos-flex">
                         <div class="col">
                             <div class="card div_card_productos">
-                                <img src="images/zapatos1.jpg" class="card-img-top div_productos-img" alt="borcegos negros">
+                                <img src="images/zapatos1.jpg" class="card-img-top div_productos-img"
+                                    alt="borcegos negros">
                                 <div class="card-body ">
                                     <h5 class="card-title">Borcegos "lili"</h5>
                                     <p class="card-text">$1790</p>
@@ -86,7 +88,8 @@
                         </div>
                         <div class="col">
                             <div class="card div_card_productos">
-                                <img src="images/zapatos2.jpg" class="card-img-top div_productos-img" alt="botas marrones">
+                                <img src="images/zapatos2.jpg" class="card-img-top div_productos-img"
+                                    alt="botas marrones">
                                 <div class="card-body ">
                                     <h5 class="card-title">Borcegos "brown"</h5>
                                     <p class="card-text">$1800</p>
@@ -96,7 +99,8 @@
                         </div>
                         <div class="col">
                             <div class="card div_card_productos">
-                                <img src="images/zapatos3.jpg" class="card-img-top div_productos-img" alt="botas blancas">
+                                <img src="images/zapatos3.jpg" class="card-img-top div_productos-img"
+                                    alt="botas blancas">
                                 <div class="card-body">
                                     <h5 class="card-title">Botas "white"</h5>
                                     <p class="card-text">$2860</p>
@@ -106,7 +110,8 @@
                         </div>
                         <div class="col">
                             <div class="card div_card_productos">
-                                <img src="images/zapatos4.jpg" class="card-img-top div_productos-img" alt="botas negras con hebillas">
+                                <img src="images/zapatos4.jpg" class="card-img-top div_productos-img"
+                                    alt="botas negras con hebillas">
                                 <div class="card-body">
                                     <h5 class="card-title">Borcegos"roy"</h5>
                                     <p class="card-text">$1990</p>
@@ -116,7 +121,8 @@
                         </div>
                         <div class="col">
                             <div class="card div_card_productos div_esp">
-                                <img src="images/zapato5.jpg" class="card-img-top div_productos-img" alt="botas largas blancas">
+                                <img src="images/zapato5.jpg" class="card-img-top div_productos-img"
+                                    alt="botas largas blancas">
                                 <div class="card-body">
                                     <h5 class="card-title">Botas"Whiterow"</h5>
                                     <p class="card-text">$1990</p>
@@ -126,7 +132,8 @@
                         </div>
                         <div class="col">
                             <div class="card div_card_productos">
-                                <img src="images/zapato6.jpg" class="card-img-top div_productos-img" alt="botas con taco">
+                                <img src="images/zapato6.jpg" class="card-img-top div_productos-img"
+                                    alt="botas con taco">
                                 <div class="card-body ">
                                     <h5 class="card-title">Botas "Red"</h5>
                                     <p class="card-text">$2850</p>
@@ -196,4 +203,3 @@
 </body>
 
 </html>
-
